Fix Scrollbar

--- a/style.css
+++ b/style.css
@@ -6,18 +6,15 @@ body {
     background: var(--bg);
     transition: background 500ms ease-in-out, color 1000ms ease-in-out;
 }
-
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
-
 a {
     color: currentColor;
     text-decoration: none;
 }
-
 header {
     padding: 1em;
     clip-path: polygon(50% 0%, 100% 0, 100% 65%, 50% 100%, 0 65%, 0 0);
@@ -26,35 +23,27 @@ header {
     padding-bottom: 3.5em;
     text-align: center;
 }
-
 main {
     min-height: 1000px;
     padding: 2rem;
 }
-
 img {
     margin: 2em 0 0;
     width: 180px;
     height: 180px;
 }
-
-/* Navbar */
-
 .navbar {
     height: 70px;
     width: 100%;
     background: var(--bg-nav);
     color: var(--text);
 }
-
 .navbar-nav {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     height: 100%;
 }
-
-
 .dropdown {
     position: absolute;
     width: 500px;
@@ -78,14 +67,10 @@ img {
 
     transition: opacity .15s ease-out;
 }
-
-
 .has-dropdown:focus-within .dropdown   {
     opacity: 1;
     z-index: 1;
 }
-
-
 .dropdown-item a {
     width: 100%;
     height: 100%;
@@ -93,7 +78,6 @@ img {
     padding-left: 10px;
     font-weight: bold;
 }
-
 .dropdown-item a::before {
     content: ' ';
     border: 2px solid var(--border-color);
@@ -104,11 +88,6 @@ img {
     vertical-align: middle;
     margin-right: 10px;
 }
-
-
-/* Themes */
-
-
 :root {
     --gray0: #f8f8f8;
     --gray1: #dbe1e8;
@@ -121,7 +100,6 @@ img {
     --purple: #a82dd1;
     --yellow: #fff565;
 }
-
 .light {
     --bg: var(--gray0);
     --bg-nav: linear-gradient(to right, var(--gray1), var(--gray3));
@@ -130,8 +108,6 @@ img {
     --border-color: var(--blue);
     --bg-solar: var(--yellow);
 }
-  
-
 .dark {
     --bg: var(--gray5);
     --bg-nav: linear-gradient(to right, var(--gray5), var(--gray6));
@@ -140,7 +116,6 @@ img {
     --border-color: var(--purple);
     --bg-solar: var(--blue);
 }
-
 .solar {
     --gray0: #fbffd4;
     --gray1: #f7f8d0;
@@ -150,24 +125,15 @@ img {
     --gray5: #005368;
     --gray6: #003d4c;
 }
-
-
 #dark::before {
     background: #2a2e35;
 }
-
 #light::before {
     background: #ffffff;
 }
-
 #solar::before {
     background: var(--bg-solar);
 }
-
-
-/* Logo Animation */
-
-
 @keyframes color-rotate {
     from {
         filter: hue-rotate(0deg);
@@ -176,10 +142,21 @@ img {
         filter: hue-rotate(360deg);
     }
 }
-
-
 .logo:hover {
     animation: color-rotate 1s;
     animation-iteration-count: infinite; 
     animation-direction: alternate;
+}
+body::-webkit-scrollbar {
+    width: 8px;
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #444;
+    border-radius: 6px;
+}
+body::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+body::-webkit-scrollbar-track-piece {
+    background-color: transparent;
 }
